kubernetes/cluster/smart-home/shinobi/shinobi.yaml
# Service: Shinobi
# Ingress: nvr.brhd.io
# Label: app.kubernetes.io/name: shinobi
---
kind: Service
apiVersion: v1
metadata:
  name: shinobi
  labels:
    app.kubernetes.io/name: shinobi
  namespace: smart-home
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: shinobi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shinobi
  namespace: smart-home
  labels:
    app.kubernetes.io/name: shinobi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: shinobi
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  template:
    metadata:
      namespace: smart-home
      labels:
        app.kubernetes.io/name: shinobi
    spec:
      restartPolicy: Always
      containers:
        - name: shinobi
          image:  registry.gitlab.com/shinobi-systems/shinobi@sha256:62b647f4bd8b41797a22ef5425d27b67ae9dd7faf9f16d090f8724eeb3563939
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
            limits:
              memory: 1Gi
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: shinobi-config
              mountPath: /config
            - name: shinobi-plugins
              mountPath: /home/Shinobi/plugins
            - name: shinobi-streams
              mountPath: /dev/shm/Shinobi/streams
            - name: shinobi-videos
              mountPath: /home/Shinobi/videos
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
      volumes:
        - name: shinobi-config
          persistentVolumeClaim:
            claimName: shinobi-config
        - name: shinobi-plugins
          persistentVolumeClaim:
            claimName: shinobi-plugins
        - name: shinobi-streams
          emptyDir:
            medium: Memory
            sizeLimit: 500Mi
        - name: shinobi-videos
          persistentVolumeClaim:
            claimName: nvr
      nodeSelector:
        nvidia.com/gpu.present: "true"
